# -

./: .gitignore  大型项目规划.md  影资管家_开发文档_全中文现代DIT界面版.md
dit-tools-src/cinevault-pro/: CMakeLists.txt  CMakePresets.json  README.md
dit-tools-src/cinevault-pro/cmake/: FindFFmpeg.cmake  PrepareExifToolDependency.cmake  PrepareLocalSearchDependencies.cmake  PrepareSearchAssistantDependencies.cmake  exiftool-dependencies.lock.json  local-search-dependencies.lock.json  search-assistant-dependencies.lock.json
dit-tools-src/cinevault-pro/docs/: 内置轻量文本搜索助手完整方案.md  已知限制-001-最小GUI首测.md  本地语义搜索依赖.md  构建与依赖.md  测试清单-001-最小GUI首测.md  测试清单-002-真实导入闭环.md  自然语言搜索全面召回优化方案.md  视觉接口502诊断与客户端容错修复.md  视觉模型辅助模糊搜索方案.md
dit-tools-src/cinevault-pro/resources/fonts/: README.md
dit-tools-src/cinevault-pro/resources/icons/: README.md
dit-tools-src/cinevault-pro/resources/templates/: README.md
dit-tools-src/cinevault-pro/resources/translations/: README.md
dit-tools-src/cinevault-pro/src/app/: AppBootstrap.cpp  AppBootstrap.h  AppContext.cpp  AppContext.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h  main.cpp  windows_app_icon.rc
dit-tools-src/cinevault-pro/src/application/: ApplicationIdleMonitor.cpp  ApplicationIdleMonitor.h  BackgroundMaintenanceCoordinator.cpp  BackgroundMaintenanceCoordinator.h  DocumentPreviewService.cpp  DocumentPreviewService.h  FeedbackService.cpp  FeedbackService.h  ImportService.cpp  ImportService.h  JobService.cpp  JobService.h  LibraryQueryService.cpp  LibraryQueryService.h  MaterialBackupService.cpp  MaterialBackupService.h  MaterialCatalogSyncService.cpp  MaterialCatalogSyncService.h  MaterialCenterQueryService.cpp  MaterialCenterQueryService.h  MediaTaskService.cpp  MediaTaskService.h  MetadataExtractionService.cpp  MetadataExtractionService.h  ProjectService.cpp  ProjectService.h  ReportExportService.cpp  ReportExportService.h  SearchAssistantLifecycleController.cpp  SearchAssistantLifecycleController.h  SearchDocumentSyncService.cpp  SearchDocumentSyncService.h  SourceChangeMonitor.cpp  SourceChangeMonitor.h  StorageVolumeService.cpp  StorageVolumeService.h  SystemIdleMonitor.cpp  SystemIdleMonitor.h  UpdateService.cpp  UpdateService.h  (+4 more)
dit-tools-src/cinevault-pro/src/core/backup/: BackupCopyEngine.cpp  BackupCopyEngine.h  BackupPlanner.cpp  BackupPlanner.h  VolumeEjectService.cpp  VolumeEjectService.h
dit-tools-src/cinevault-pro/src/core/jobs/: JobEngine.cpp  JobEngine.h
dit-tools-src/cinevault-pro/src/core/media/: MediaProbeEngine.cpp  MediaProbeEngine.h
dit-tools-src/cinevault-pro/src/core/report/: ReportModels.h  ReportRenderEngine.cpp  ReportRenderEngine.h
dit-tools-src/cinevault-pro/src/core/scan/: FileTypeService.cpp  FileTypeService.h  ScanEngine.cpp  ScanEngine.h
dit-tools-src/cinevault-pro/src/core/search/: BertTokenizer.cpp  BertTokenizer.h  BgeEmbeddingModel.cpp  BgeEmbeddingModel.h  CaptureTimeResolver.cpp  CaptureTimeResolver.h  NaturalLanguageQueryParser.cpp  NaturalLanguageQueryParser.h  SearchEngine.cpp  SearchEngine.h  SearchQueryUnderstanding.cpp  SearchQueryUnderstanding.h  SearchReliabilityEvaluator.cpp  SearchReliabilityEvaluator.h  SearchResultFusion.cpp  SearchResultFusion.h  SemanticSearchIndexService.cpp  SemanticSearchIndexService.h  SemanticSearchProvider.h  SemanticVectorIndex.cpp  SemanticVectorIndex.h
dit-tools-src/cinevault-pro/src/core/thumbnail/: ContactSheetBuilder.cpp  ContactSheetBuilder.h  ThumbnailEngine.cpp  ThumbnailEngine.h
dit-tools-src/cinevault-pro/src/domain/: Entities.h  Enums.h  SearchTypes.h
dit-tools-src/cinevault-pro/src/infrastructure/config/: AppSettings.cpp  AppSettings.h
dit-tools-src/cinevault-pro/src/infrastructure/db/: DatabaseManager.cpp  DatabaseManager.h  DatabaseMigration.cpp  DatabaseMigration.h  GlobalDatabaseManager.cpp  GlobalDatabaseManager.h
dit-tools-src/cinevault-pro/src/infrastructure/ffmpeg/: FFmpegAdapter.cpp  FFmpegAdapter.h
dit-tools-src/cinevault-pro/src/infrastructure/logging/: Logger.cpp  Logger.h
dit-tools-src/cinevault-pro/src/infrastructure/metadata/: ExifToolAdapter.cpp  ExifToolAdapter.h
dit-tools-src/cinevault-pro/src/infrastructure/network/: VisionApiClient.cpp  VisionApiClient.h  VisionResponseParser.cpp  VisionResponseParser.h
dit-tools-src/cinevault-pro/src/infrastructure/search/: LocalSearchAssistantRuntime.cpp  LocalSearchAssistantRuntime.h  SearchAssistantClient.cpp  SearchAssistantClient.h
dit-tools-src/cinevault-pro/src/shared/: FileRevealService.cpp  FileRevealService.h  FolderPathMetadata.cpp  FolderPathMetadata.h  Formatters.cpp  Formatters.h  Paths.cpp  Paths.h  ScopedBackgroundThreadPriority.h  SearchConfiguration.h  VisualAnalysisMetadata.cpp  VisualAnalysisMetadata.h
dit-tools-src/cinevault-pro/src/ui/imaging/: LocalImageProvider.cpp  LocalImageProvider.h  LocalImageUrlHelper.cpp  LocalImageUrlHelper.h
dit-tools-src/cinevault-pro/src/ui/models/: AssetListModel.cpp  (+21 more)
dit-tools-src/cinevault-pro/tests/unit/: AppSettingsBudgetTest.cpp  AppSettingsSearchTest.cpp  ApplicationIdleMonitorTest.cpp  BackgroundMonitoringTest.cpp  BackupPlannerTest.cpp  CaptureTimeResolverTest.cpp  DocumentPreviewServiceTest.cpp  ExifToolAdapterTest.cpp  FeedbackAttachmentCacheTest.cpp  FeedbackMessageListModelTest.cpp  FolderDatabaseMigrationTest.cpp  FolderPathMetadataTest.cpp  ImportServiceLegacyRescanTest.cpp  JobEngineTest.cpp  JobListModelTest.cpp  LocalImageProviderTest.cpp  LocalImageUrlHelperTest.cpp  MaterialCatalogSyncServiceTest.cpp  MaterialCenterQueryServiceTest.cpp  MaterialCenterUiContractTest.cpp  MediaTaskServiceRecoveryTest.cpp  MetadataExtractionServiceTest.cpp  NaturalLanguageQueryParserTest.cpp  QuickSearchControllerTest.cpp  SearchAssistantIntegrationTest.cpp  SearchConfigurationTest.cpp  SearchDocumentSyncServiceTest.cpp  SearchEngineTest.cpp  SearchQueryUnderstandingTest.cpp  SearchReliabilityEvaluatorTest.cpp  SearchResultFusionTest.cpp  SemanticSearchIndexServiceTest.cpp  SingleInstanceGuardTest.cpp  SmokeTest.cpp  UpdateServiceTest.cpp  VisionApiClientImageTest.cpp  VisionApiClientJsonTest.cpp  VisualAnalysisMetadataTest.cpp
(+398 files in other folders)
